<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/move_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/move_before"
            android:background="@drawable/foodnote_ic_moveback"/>

        <TextView
            android:id="@+id/date_view"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/move_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/move_next"
            android:src="@drawable/foodnote_ic_movenext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:background="#7F7F7F" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/desc"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:baselineAligned="true" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/today" />

            <TextView
                android:id="@+id/total_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#C0C0C0"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/unit1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/breakfast_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/breakfast_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/lunch_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/lunch_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/dinner_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/dinner_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/morning_snack_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning_snack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/morning_snack_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_morning_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/afternoon_snack_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon_snack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/afternoon_snack_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_afternoon_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/evening_snack_layout"
                android:layout_width="265dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening_snack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/evening_snack_calorie"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/unit1"
                    android:textColor="#C0C0C0"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#4A7EBB" />

            <ImageButton
                android:id="@+id/add_icon_evening_snack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/choose_food"
                android:src="@android:drawable/ic_input_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4A7EBB" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>